2007-01-05  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/sudoku_generator_gui.py: Disable generate options while
	the puzzle generator is running (Bug #392947).

2007-01-05  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/dialog_swallower.py: Correct Bug #384684: Crash when 
	closing game with "x", which was caused by reading data from
	memory which had already been freed by the garbage collection. 

2006-12-29  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gsudoku.py: Fix syntax error introduced by change from
	bug #385937.

2006-12-25  paul  <ephraim_owns@hotmail.com>
	* Added hitch to gnome_sudoku.py to import PyGTK before GTK.

2006-12-17  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/defaults.py.in:
	* src/lib/gnome_sudoku.py: Add GNU license to about dialog.

2006-12-09  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/Makefile.am:
	* src/.cvsignore:
	* src/gnome-sudoku.in:
	* src/gnome-sudoku:
	Fix Bug #382057 – assumed paths in python files, by importing
	pyexecdir into python path.

2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gnome_sudoku.py: Set F1 to open help contents, 
	patch from Thomas Andersen in Bug #376633. 

2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gsudoku.py: se gtk.AboutDialog instead of gnome.ui.About,
	patch from Thomas Andersen in Bug #379283. 

2006-11-28  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gsudoku.py: Convert keypad numbers to normal numbers,
	patch from Thomas Andersen in Bug #379285. 

2006-11-18  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* glade/game_selector/game_selector.glade:
	* glade/game_selector/game_selector.gladep: Remove unused glade files.

2006-11-05  Andreas Røsdal  <andrearo@pvv.ntnu.no>

	* src/lib/gtk_goodies/gconf_wrapper.py: Add support for BooleanType.

2006-11-04  Thomas M. Hinkle  <Thomas_Hinkle@alumni.brown.edu>

	* images/footprints.png: Used shoe-prints. Note that if we get a
	real artist to pretty up this icon, it needs to contain mostly