@@ -1,5 +1,11 @@
 2007-01-05  Andreas Røsdal  <andreasr@gnome.org>
 
+	* src/lib/sudoku_generator_gui.py: Fix three issues with the 
+	progress bar in the puzzle generator. Patch from Thomas Andersen 
+	in Bug #392616.
+
+2007-01-05  Andreas Røsdal  <andreasr@gnome.org>
+
 	* src/lib/sudoku_generator_gui.py: Disable generate options while
 	the puzzle generator is running (Bug #392947).
 
